export const snapshot = {};

snapshot[`constant union 1`] = `
{
  anyOf: [
    {
      enum: [
        "Hello",
        "world!",
      ],
      type: "string",
    },
    {
      enum: [
        42,
        420,
      ],
      type: "number",
    },
  ],
}
`;

snapshot[`constant union 2`] = `
{
  anyOf: [
    {
      enum: [
        "Hello",
        "world!",
      ],
      type: "string",
    },
    {
      enum: [
        42,
        420,
      ],
      type: "number",
    },
  ],
  description: "One.",
}
`;

snapshot[`constant union 3`] = `
{
  anyOf: [
    {
      enum: [
        "Hello",
        "world!",
      ],
      type: "string",
    },
    {
      enum: [
        42,
        420,
      ],
      type: "number",
    },
  ],
  description: "Two. One.",
}
`;
